add GitHub button/link

--- a/src/index.html
+++ b/src/index.html
@@ -191,6 +191,15 @@
                 >
                   View Resume
                 </a>
+                <span class="w-20 m-3"> </span>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--resume"
+                  href="https://github.com/remuscordea?tab=repositories"
+                >
+                  Check on GitHub
+                </a>
               </span>
             </div>
           </div>
