--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,7 @@
                   class="cta-btn cta-btn--resume"
                   href="https://github.com/remuscordea?tab=repositories"
                 >
-                  Check on GitHub
+                  GitHub
                 </a>
               </span>
             </div>
