project update: NC-Vision

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/RemusCordea.pdf"
+                  href="assets/RemusCordeaCV.pdf"
                 >
                   View Resume
                 </a>
@@ -213,6 +213,68 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Relevant Work</h2>
+
+          <!-- NC-Visin Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">NC VISION</h3>
+                <div>
+                  <p class="mb-4">
+                    A no-code platform designed for modernizing manufacturing IT
+                    systems.<br />
+                    <br />
+                    Contributing to developing a no-code platform that
+                    modernizes manufacturing IT systems, enabling users to
+                    design and customize enterprise applications through a
+                    visual environment with the flexibility of traditional
+                    programming.
+                  </p>
+                </div>
+                <div class="technologies devicons-color">
+                  <i class="devicon-react-original colored"></i>
+                  <i class="devicon-nodejs-plain-wordmark colored"></i>
+                  <i class="devicon-docker-plain colored"></i>
+                  <i
+                    class="devicon-amazonwebservices-plain-wordmark colored"
+                  ></i>
+                  <i class="devicon-jest-plain colored"></i>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://nc-vision.com/"
+                >
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://nc-vision.com/"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="NC-VISION Project Image"
+                      class="img-fluid"
+                      src="assets/NC-Vision Logo.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- OUP English Hub Project -->
           <div class="row">
