--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,6 @@
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
     ></script>
-
-    <!-- Todo: remove the below script once you finish your portfolio -->
-    <!-- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
   </head>
 
   <body>
@@ -199,6 +196,14 @@
                   href="https://github.com/remuscordea?tab=repositories"
                 >
                   GitHub
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--resume"
+                  href="https://www.linkedin.com/in/remus-cordea-b49882106/"
+                >
+                  LinkedIn
                 </a>
               </span>
             </div>
