added linkedin link

--- a/src/index.html
+++ b/src/index.html
@@ -197,6 +197,7 @@
                 >
                   GitHub
                 </a>
+                <span class="w-20 m-3"> </span>
                 <a
                   rel="noreferrer"
                   target="_blank"
