--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/RemusCordeaCV.pdf"
+                  href="assets/CV-RemusCordea2025.pdf"
                 >
                   View Resume
                 </a>
