--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/CV-RemusCordea2025.pdf"
+                  href="assets/CV-RemusCordea2026.pdf"
                 >
                   View Resume
                 </a>
@@ -218,7 +218,7 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Relevant Work</h2>
+          <h2 class="section-title dark-blue-text">Major Projects</h2>
 
           <!-- NC-Visin Project -->
           <div class="row">
