--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am an experienced full-stack developer with over six years of
+                I am an experienced full-stack developer with over seven years of
                 relevant work experience. My expertise lies in building websites
                 and applications using cutting-edge technologies.
               </p>
@@ -184,7 +184,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/CV-RemusCordea2026.pdf"
+                  href="assets/CV-RemusCordea2026-en.pdf"
                 >
                   View Resume
                 </a>
@@ -219,6 +219,64 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Major Projects</h2>
+
+          <!-- TheRange Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">The Range</h3>
+                <div>
+                  <p class="mb-4">
+                    A leading UK multi-category retailer, operating a fast-growing online marketplace 
+                    ecosystem.<br />
+                    <br />
+                    Contributing to the backend development of The Range marketplace platform by integrating Mirakl Marketplace and Ads services, ensuring reliable catalog synchronization, offer updates, and scalable seller/store data flows.
+                  </p>
+                </div>
+                <div class="technologies devicons-color">
+                  <i class="devicon-typescript-plain colored"></i>
+                  <i class="devicon-nodejs-plain-wordmark colored"></i>
+                  <i class="devicon-docker-plain colored"></i>
+                  <i
+                    class="devicon-amazonwebservices-plain-wordmark colored"
+                  ></i>
+                  <i class="devicon-jest-plain colored"></i>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://www.therange.co.uk/"
+                >
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://www.therange.co.uk/"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="The Range Project Image"
+                      class="img-fluid"
+                      src="assets/TheRange Logo.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- NC-Visin Project -->
           <div class="row">
